arrow alignment fixed

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -7,7 +7,7 @@
   z-index: 1;
 
   &-right {
-    width: 120px;
+    width: 140px;
     @include flex-center;
     margin-top: 2px;
     cursor: pointer;
@@ -26,7 +26,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: inherit;
+    width: 110px;
   }
 
   &-dropdown-item {
